--- a/src/app/emprestimo/consultar-emprestimo/consultar-emprestimo.component.html
+++ b/src/app/emprestimo/consultar-emprestimo/consultar-emprestimo.component.html
@@ -2,7 +2,8 @@
 
   <div class="form-group">
     <label for="nome">Codigo do Associado</label>
-    <input type="number" class="form-control" name="codigo_assoc" id="codigo_assoc" formControlName="codigo_assoc">
+    <input placeholder="8 ou 9" type="number" class="form-control" name="codigo_assoc" id="codigo_assoc"
+      formControlName="codigo_assoc">
   </div>
 
   <input type="submit" class="btn btn-primary mt-4" value="Buscar">
