--- a/src/app/publicacao/consultar-publicacao/consultar-publicacao.component.html
+++ b/src/app/publicacao/consultar-publicacao/consultar-publicacao.component.html
@@ -2,7 +2,7 @@
 
   <div class="form-group">
     <label for="nome">ISBN</label>
-    <input type="text" class="form-control" name="isbn" id="isbn" formControlName="isbn">
+    <input placeholder="112233" type="text" class="form-control" name="isbn" id="isbn" formControlName="isbn">
   </div>
 
   <input type="submit" class="btn btn-primary mt-4" value="Enviar">
